2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Ld/Gate/Makefile.am:
	* Oomek/Makefile.am:
	* Ld/Gate/Makefile.am (added):
	* Oomek/Makefile.am (added):
	  Add missing makefiles.

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	  Add Oomek to the build.

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* HACKING:
	  Update todo list

2012-02-24  Stefan Sauer  <ensonic@users.sf.net>

	* Zwar/11Stereo/Makefile.am:
	  Install song.
	  
	* Oomek (added):
	* Oomek/Exciter (added):
	* Oomek/Exciter/Exciter.int.cpp (added):
	* Oomek/Exciter/test.bmx (added):
	* Oomek/Exciter/Exciter.cpp (added):
	* Oomek/Exciter/909.bmx (added):
	* Oomek/Exciter/909_excite.bmx (added):
	* Oomek/Exciter/Exciter.float.cpp (added):
	* Oomek/Exciter/_README.txt (added):
	* Oomek/Masterizer (added):
	* Oomek/Masterizer/Masterizer.cpp (added):
	* Oomek/Masterizer/Masterizer_test.bmx (added):
	* Oomek/Masterizer/_README.txt (added):
	* Oomek/Aggressor (added):
	* Oomek/Aggressor/Oomek_Aggressor_demo.bmx (added):
	* Oomek/Aggressor/Oomek_Aggressor_ctrack.bmx (added):
	* Oomek/Aggressor/fft.h (added):
	* Oomek/Aggressor/303.cpp (added):
	* Oomek/Aggressor/Makefile.am (added):
	  Add sources for Oomek machines and port Aggressor. Thanks a lot to
	  Oomek!

2012-02-22  Stefan Sauer  <ensonic@users.sf.net>

	* AseDev/a4pFilter01/Makefile.am:
	* Makefile.am:
	* configure.ac:
	* AseDev/a4pFilter01/AseDev_a4pFilter01.html (added):
	* AseDev/a4pFilter01/AsDev_a4pFilter01.html (deleted):
	  Fix Author name.

2012-02-22  Stefan Sauer  <ensonic@users.sf.net>

	* Arguru/Distortion/Distortion.cpp:
	* Arguru/Distortion/Makefile.am:
	* Arguru/GoaSlicer/goaslicer.cpp:
	* Arguru/GoaSlicer (added):
	* Arguru/GoaSlicer/goaslicer.cpp (added):
	* Arguru/README (added):
	* Arguru/Distortion/Makefile.am (added):
	* Arguru/Distortion/Distortion.hpp (deleted):
	* Arguru/README:
	  Add a Readme explaining the origin of the sources. Try a backport for
	  distortion.
